fix: align in slider header on fhd

--- a/wp-content/themes/allegiant/css/dna/_index.scss
+++ b/wp-content/themes/allegiant/css/dna/_index.scss
@@ -2,3 +2,9 @@
     overflow-x: hidden!important;
     width: 100%!important;
 }
+.carousel-caption.home{
+    margin-top: 75px;
+    @media (min-width: $fullHdDesktops) {
+        margin-top: 150px;
+    }
+}
